# adv-python-proj

./: README.md  budget.py  config.py  dash_app.py  pyproject.toml  review.md  test_budget.py
assets/: style.css  styles.css
assets/files/: capitalized.csv  diff_dates.csv  diff_order_cols.csv  extra_cols.csv  invalid_categories.csv  invalid_dates.csv  invalid_empty_vals.csv  invalid_missing_cols.csv  invalid_neg_amounts.csv  invalid_uneven_rows.csv  lowercase.csv  mult_months.csv  semicolon_delimiter.csv  tab_delimiter.csv
db/: schema.sql
